--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/register.css">
     <link rel="stylesheet" href="./css/login.css">
-
+    <link rel="stylesheet" href="./css/chat.css">
 </head>
 <body>
     <div id="app"></div>
@@ -18,5 +18,6 @@
     <script src="./js/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.22.0/firebase-firestore.js"></script>
 </body>
 </html>
