--- a/temp.html
+++ b/temp.html
@@ -8,26 +8,23 @@
     <link rel="stylesheet" href="./css/chat.css">
 </head>
 <body>
-    <div class="chat-container">
+    <div class="create-conversation-container">
         <div class="header">MinX Chat</div>
-        <div class="main">
-            <div class="conversation-detail">
-                <div class="conversation-title">First Conversation</div>
-                <div class="list-message">
-                    <div class="message message-mine">
-                        <div class="message-content">Hello</div>
-                    </div>
-                    <div class="message message-other">
-                        <div class="owner">Other</div>
-                        <div class="message-content">Good Bye</div>
-                    </div>
-                </div>
-                <form id="send-message-form">
-                    <input type="text" placeholder="Type a message" name="message">
-                    <button class="btn">Send</button>
-                </form>
+        <form id="create-conversation-form" style="padding: 40px 20%">
+            <h3 class="mb-1">Create a new conversation</h3>
+            <div class="input-wrapper">
+                <input type="text" name="title" placeholder="Conversation Name" />
+                <div id="conversation-title-error" class="err"></div>
             </div>
-        </div>
+            <div class="input-wrapper">
+                <input type="text" name="title" placeholder="Friend Email" />
+                <div id="conversation-title-error" class="err"></div>
+            </div>
+            <div class="action">
+                <button type="submit" class="btn">Save</button>
+                <button type="button" class="btn btn-light">Cancel</button>
+            </div>
+        </form>
     </div>
 </body>
 </html>
